# wavefoundry

./: .aiignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  WARP.md  docs-gardener  docs-lint  pyproject.toml  start-wavefoundry.prompt.md
.agents/: mcp_config.json
.air/: mcp.json
.claude/: launch.json  settings.json
.claude/agents/: factor-03-config.md  factor-05-build-release-run.md  factor-12-admin-processes.md  factor-13-api-first.md  guru.md
.claude/hooks/: post-edit  post-edit.cmd  post-edit.py  pre-edit  pre-edit.cmd  pre-edit.py  pycache-cleanup  pycache-cleanup.cmd  pycache-cleanup.py  session-capture  session-capture.cmd  session-capture.py  simulate-hooks  simulate-hooks.cmd  simulate-hooks.py
.claude/skills/: upgrade-wave.md
.codex/: config.toml
.cursor/: hooks.json  mcp.json
.cursor/hooks/: after-file-edit  after-file-edit.cmd  after-file-edit.py  docs-lint  docs-lint.cmd  docs-lint.py  framework-plan-warn  framework-plan-warn.cmd  framework-plan-warn.py  seed-warn  seed-warn.cmd  seed-warn.py
.cursor/rules/: auto-guru.mdc  project-context.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/hooks/: hooks.json  post-tool-use  post-tool-use.cmd  post-tool-use.py  pre-tool-use  pre-tool-use.cmd  pre-tool-use.py
.github/workflows/: release.yml
.junie/: guidelines.md
.junie/mcp/: mcp.json
.wavefoundry/: CHANGELOG.md  README.md
.wavefoundry/framework/: MANIFEST  README.md  RELEASE_NOTES.md  VERSION  canonical-names.json  scan-allowlist  scan-rules.toml
.wavefoundry/git-hooks/: post-checkout  post-merge  post-rewrite
.windsurf/: hooks.json
.windsurf/hooks/: docs-lint.py  seed-protect.py
docs/: ARCHITECTURE.md  PLANS.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  missing-docs.md  repo-index.md  repo-profile.json  scan-rules.toml  workflow-config.json
docs/agents/: README.md  architecture-reviewer.md  code-insight-agent.md  code-reviewer.md  council-moderator.md  docs-contract-reviewer.md  factor-03-config.md  factor-05-build-release-run.md  factor-12-admin-processes.md  factor-13-api-first.md  frontend-developer.md  guru.md  implementer.md  performance-reviewer.md  planner.md  platform-mapping.md  qa-reviewer.md  release-reviewer.md  security-reviewer.md  session-handoff.md  software-engineer.md  wave-coordinator.md
docs/architecture/: chunking-and-indexing-pipeline.md  cross-cutting-concerns.md  current-state.md  data-and-control-flow.md  design-system.md  domain-map.md  embedding-model.md  graph-index-system.md  layering-rules.md  performance-budget.md  search-architecture.md  testing-architecture.md  threat-model.md
experiments/: 1p7dg-spike-output.txt  1p7dg-spike-receiver-headroom.py  1p7dh-aop-surface-census.py  1p7dh-java-config-read-census.py  buffer_bench.py
framework/: VERSION
(+1763 files in other folders)
