[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wavefoundry"
version = "1.0.0"
description = "An agent harness for software repositories. Gives AI coding agents feedforward guidance and feedback sensors for structured, auditable delivery lifecycle."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Cory Hacking" },
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "packaging>=24",
    "fastembed",
    "lancedb",
    "mcp[cli]",
    "numpy",
    "tree-sitter>=0.24,<0.26",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-c-sharp",
    "tree-sitter-bash",
    "tree-sitter-kotlin",
    "tree-sitter-sql",
    "tree-sitter-swift",
    "tree-sitter-objc",
    "tree-sitter-hcl",
    "tree-sitter-scss",
    "tree-sitter-make",
    "tree-sitter-scala",
    "tree-sitter-html",
    "tree-sitter-xml",
    "tree-sitter-ruby",
    "tree-sitter-php",
    "tree-sitter-yaml",
    "tree-sitter-toml",
    "tree-sitter-json",
    "tree-sitter-css",
    "tree-sitter-powershell",
]

[project.urls]
Homepage = "https://github.com/coryhacking/wavefoundry"
Repository = "https://github.com/coryhacking/wavefoundry"
Issues = "https://github.com/coryhacking/wavefoundry/issues"
Changelog = "https://github.com/coryhacking/wavefoundry/blob/main/CHANGELOG.md"
